[package]
name = "atolldb"
version = "0.2.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4"
bincode = "1.3"
fs2 = "0.4"

[[bin]]
name = "test_header"
path = "src/test_header.rs"
